--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -143,6 +143,8 @@ bind = $mainMod, P, exec, $terminal --class pulsemixer -e pulsemixer
 # window management
 bind = $mainMod, Tab, togglespecialworkspace
 bind = $mainMod SHIFT, Tab, movetoworkspace, special
+bind = $mainMod, bracketright, workspace, e+1
+bind = $mainMod, bracketleft, workspace, e-1
 bind = $mainMod, J, cyclenext
 bind = $mainMod, K, cyclenext, prev
 binde = $mainMod, H, resizeactive, -10 0
