--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -18,7 +18,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once=hyprctl setcursor bibata-cursors 16
-exec-once = fcitx5 & hyprpaper
+exec-once = fcitx5 & waybar & hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -121,7 +121,7 @@ windowrulev2 = workspace 1,class:^(Emacs)$
 windowrulev2 = workspace 2,class:^(Alacritty)$
 windowrulev2 = workspace 3,class:^(firefox)$
 windowrulev2 = workspace 4,class:^(ranger)$,class:dolphin
-windowrulev2 = workspace 8,class:^(steam)$
+windowrulev2 = workspace 8,class:^(steam)$,class:^(dota2)$
 windowrulev2 = workspace special,class:^(Spotify)$
 
 
