--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -120,9 +120,11 @@ windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Emacs)$
 windowrulev2 = workspace 2,class:^(Alacritty)$
 windowrulev2 = workspace 3,class:^(firefox)$
-windowrulev2 = workspace 4,class:^(ranger)$,class:dolphin
+windowrulev2 = workspace 4,class:^(ranger)$
+windowrulev2 = workspace 4,class:^(org.kde.dolphin)$
 windowrulev2 = workspace 8,class:^(steam)$,class:^(dota2)$
-windowrulev2 = workspace special,class:^(Spotify)$
+windowrulev2 = workspace 9,class:^(QQ)$
+windowrulev2 = workspace special,title:Spotify
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
