--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -122,7 +122,8 @@ windowrulev2 = workspace 2,class:^(Alacritty)$
 windowrulev2 = workspace 3,class:^(firefox)$
 windowrulev2 = workspace 4,class:^(ranger)$
 windowrulev2 = workspace 4,class:^(org.kde.dolphin)$
-windowrulev2 = workspace 8,class:^(steam)$,class:^(dota2)$
+windowrulev2 = workspace 8,class:^(steam)$
+windowrulev2 = workspace 8,class:^(dota2)$
 windowrulev2 = workspace 9,class:^(QQ)$
 windowrulev2 = workspace special,title:Spotify
 
