--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -52,8 +52,8 @@ general {
     gaps_in = 3
     gaps_out = 0
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgb(44475a) rgb(bd93f9) 90deg
+    col.inactive_border = rgba(44475aaa)
 
     layout = master
 }
@@ -62,20 +62,12 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    #blur = yes
-    #blur_size = 3
-    #blur_passes = 1
-    #new_optimizations = on
-    #blur = {
-    #    enabled = true
-    #    size = 3
-    #    passes = 1
-    #    new_optimizations = true
-    #}
-
+    col.shadow = rgba(1E202966)
     drop_shadow = yes
-    shadow_range = 4
+    shadow_range = 60
+    shadow_offset = 1 2
     shadow_render_power = 3
+    shadow_scale = 0.97
     col.shadow = rgba(1a1a1aee)
 }
 
