--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -9,6 +9,7 @@
   "modules-left": [
     "custom/launcher",
     "hyprland/workspaces",
+    "wlr/taskbar",
     //"custom/playerctl",
     "custom/playerlabel"
   ],
@@ -47,8 +48,8 @@
   },
   "wlr/taskbar": {
     "format": "{icon}",
-    "icon-size": 14,
-    "icon-theme": "Numix-Circle",
+    "icon-size": 16,
+    "icon-theme": "BeautyLine",
     "tooltip-format": "{title}",
     "on-click": "activate"
   },
@@ -68,7 +69,8 @@
     "return-type": "json",
     "max-length": 48,
     "exec": "playerctl -i firefox -a metadata --format '{\"text\": \"{{artist}} - {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-    "on-click": "playerctl -i firefox play-pause",
+    "on-click": "hyprctl dispatch togglespecialworkspace",
+    "on-click-right": "playerctl -i firefox play-pause",
     "on-scroll-up": "playerctl previous",
     "on-scroll-down": "playerctl next",
     "format-icons": {
