--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -49,9 +49,9 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 3
+    gaps_in = 2
     gaps_out = 0
-    border_size = 2
+    border_size = 3
     col.active_border = rgb(44475a) rgb(bd93f9) 90deg
     col.inactive_border = rgba(44475aaa)
 
@@ -136,8 +136,8 @@ binde=, XF86AudioLowerVolume, exec, pulsemixer --change-volume -1
 bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, W, killactive, 
-bind = $mainMod, D, exec, rofi -modi run -show drun
-bind = $mainMod, S, exec, rofi -modi run -show window
+bind = $mainMod, D, exec, rofi -show drun
+bind = $mainMod, S, exec, rofi -show window
 bind = $mainMod, E, exec, $terminal --class ranger -e ranger
 bind = $mainMod, P, exec, $terminal --class pulsemixer -e pulsemixer
 
