--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -116,10 +116,10 @@ device:epic-mouse-v1 {
 windowrulev2 = float,class:^(pulsemixer)$
 windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Emacs)$
-windowrulev2 = workspace 2,class:^(Alacritty)$
-windowrulev2 = workspace 3,class:^(firefox)$
-windowrulev2 = workspace 4,class:^(ranger)$
-windowrulev2 = workspace 4,class:^(org.kde.dolphin)$
+windowrulev2 = workspace 1,class:^(Alacritty)$
+windowrulev2 = workspace 2,class:^(firefox)$
+windowrulev2 = workspace 3,class:^(ranger)$
+windowrulev2 = workspace 3,class:^(org.kde.dolphin)$
 windowrulev2 = workspace 8,class:^(steam)$
 windowrulev2 = workspace 8,class:^(dota2)$
 windowrulev2 = workspace 9,class:^(QQ)$
@@ -146,8 +146,8 @@ bind = $mainMod, Tab, togglespecialworkspace
 bind = $mainMod SHIFT, Tab, movetoworkspace, special
 bind = $mainMod, bracketright, workspace, e+1
 bind = $mainMod, bracketleft, workspace, e-1
-bind = $mainMod, J, cyclenext
-bind = $mainMod, K, cyclenext, prev
+bind = $mainMod, J, cyclenext, prev
+bind = $mainMod, K, cyclenext
 binde = $mainMod, H, resizeactive, -10 0
 binde = $mainMod, L, resizeactive, 10 0
 bind = $mainMod, A, layoutmsg, swapwithmaster master
