--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -113,6 +113,8 @@ device:epic-mouse-v1 {
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrule = float, feh
+windowrule = float, Rofi
 windowrulev2 = float,class:^(pulsemixer)$
 windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Alacritty)$
