--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -16,9 +16,10 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
 exec-once=hyprctl setcursor bibata-cursors 16
-exec-once = fcitx5 & waybar & hyprpaper
+exec-once = waybar & hyprpaper
+exec-once = fcitx5
+exec-once = nm-applet
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -115,6 +116,7 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrule = float, feh
 windowrule = float, Rofi
+windowrule = float, calcure
 windowrulev2 = float,class:^(pulsemixer)$
 windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Alacritty)$
