grimblast for screenshot, icon theme

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once=hyprctl setcursor bibata-cursors 16
+#exec-once = hyprctl setcursor Bibata-Modern-Ice 18
 exec-once = waybar & hyprpaper
 exec-once = fcitx5
 exec-once = nm-applet
@@ -25,7 +25,7 @@ exec-once = nm-applet
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,16
+#env = XCURSOR_SIZE,18
 env = WLR_NO_HARDWARE_CURSORS,1
 
 $terminal = alacritty
@@ -144,6 +144,7 @@ bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, S, exec, rofi -show window
 bind = $mainMod, E, exec, $terminal --class ranger -e ranger
 bind = $mainMod, P, exec, $terminal --class pulsemixer -e pulsemixer
+bind = $mainMod SHIFT, S, exec, grimblast copysave area
 
 # window management
 bind = $mainMod, Tab, togglespecialworkspace
