--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -122,7 +122,7 @@ windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Alacritty)$
 windowrulev2 = workspace 2,class:^(firefox)$
 windowrulev2 = workspace 3,class:^(ranger)$
-windowrulev2 = workspace 3,class:^(org.kde.dolphin)$
+windowrulev2 = workspace 3,class:^(pcmanfm)$
 windowrulev2 = workspace 7,class:^(Emacs)$
 windowrulev2 = workspace 8,class:^(steam)$
 windowrulev2 = workspace 8,class:^(dota2)$
