--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -137,7 +137,9 @@ $mainMod = SUPER
 binde=, XF86AudioMute, exec, pulsemixer --toggle-mute
 binde=, XF86AudioRaiseVolume, exec, pulsemixer --change-volume +1
 binde=, XF86AudioLowerVolume, exec, pulsemixer --change-volume -1
-bind = $mainMod SHIFT, Q, exit, 
+bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod, Z, exec, pkill -SIGUSR1 waybar  # toggle waybar visibility
+
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, W, killactive, 
 bind = $mainMod, D, exec, rofi -show drun
