--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -145,7 +145,7 @@ bind = $mainMod, W, killactive,
 bind = $mainMod, D, exec, rofi -show drun
 bind = $mainMod, S, exec, rofi -show window
 bind = $mainMod, E, exec, $terminal --class ranger -e ranger
-bind = $mainMod, P, exec, $terminal --class pulsemixer -e pulsemixer
+bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class pulsemixer -e pulsemixer
 bind = $mainMod SHIFT, S, exec, grimblast copysave area
 
 # window management
