--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -23,7 +23,7 @@
   ],
   "clock": {
     "format": "{:%H:%M  %a  %b %d}",
-    "on-click": "pkill calcure || alacritty --class calcure -e calcure"
+    "on-click": "pkill calcure || $TERMINAL --class calcure -e calcure"
   },
   "hyprland/workspaces": {
     "active-only": false,
@@ -176,13 +176,12 @@
       ]
     },
     "on-click": "pulsemixer --toggle-mute",
-    "on-click-right": "alacritty --class pulsemixer -e pulsemixer",
+    "on-click-right": "pkill pulsemixer || hyprctl dispatch exec \"[move 70% 68%; size 30% 30%; float] $TERMINAL -e pulsemixer\"",
     "on-scroll-up": "pulsemixer --change-volume +1",
     "on-scroll-down": "pulsemixer --change-volume -1",
     "scroll-step": 5
   },
   "custom/launcher": {
-    //"format": "󰈸",
     "format": " ",
     //"on-click": "rofi -show drun"
   }
