--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -13,6 +13,10 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+xwayland {
+  force_zero_scaling = true
+}
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
@@ -115,6 +119,7 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrule = float, feh
+windowrule = float, launcher
 windowrule = float, Rofi
 windowrule = float, calcure
 windowrulev2 = float,class:^(pulsemixer)$
@@ -142,7 +147,7 @@ bind = $mainMod, Z, exec, pkill -SIGUSR1 waybar  # toggle waybar visibility
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, W, killactive, 
-bind = $mainMod, D, exec, rofi -show drun
+bind = $mainMod, D, exec, $terminal --class launcher -e sway-launcher-desktop
 bind = $mainMod, S, exec, rofi -show window
 bind = $mainMod, E, exec, $terminal --class ranger -e ranger
 bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class pulsemixer -e pulsemixer
