--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
   "position": "bottom",
   "layer": "top",
-  "height": 16,
+  "height": 10,
   "margin-top": 0,
   "margin-bottom": 0,
   "margin-left": 0,
@@ -131,7 +131,7 @@
     "on-click-right": "nm-connection-editor"
   },
   "custom/mytray": {
-    "format": ""
+    "format": "󰥺"
   },
   "group/hardware": {
     "orientation": "horizontal",
@@ -187,6 +187,6 @@
   },
   "custom/launcher": {
     "format": " ",
-    //"on-click": "rofi -show drun"
+    "on-click": "hyprctl dispatch workspace empty"
   }
 }
