--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -74,6 +74,7 @@ decoration {
     shadow_render_power = 3
     shadow_scale = 0.97
     col.shadow = rgba(1a1a1aee)
+    dim_inactive = true
 }
 
 animations {
@@ -154,24 +155,25 @@ bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class pulsemixer -e pu
 bind = $mainMod SHIFT, S, exec, grimblast copysave area
 
 # window management
+bind = $mainMod, T, workspace, empty
 bind = $mainMod, Tab, togglespecialworkspace
 bind = $mainMod SHIFT, Tab, movetoworkspace, special
 bind = $mainMod, bracketright, workspace, e+1
 bind = $mainMod, bracketleft, workspace, e-1
-bind = $mainMod, J, cyclenext, prev
-bind = $mainMod, K, cyclenext
-binde = $mainMod, H, resizeactive, -10 0
-binde = $mainMod, L, resizeactive, 10 0
 bind = $mainMod, A, layoutmsg, swapwithmaster master
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod SHIFT, M, fullscreen, 0
 bind = $mainMod, F, togglefloating, 
 
 # Move focus with mainMod + arrow keys
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, J, movefocus, d
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, L, movefocus, r
 bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, right, movefocus, r
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
