--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -24,6 +24,7 @@ xwayland {
 exec-once = waybar & hyprpaper
 exec-once = fcitx5
 exec-once = nm-applet
+exec-once = firefox
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -206,3 +207,4 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
