--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -128,7 +128,7 @@ windowrulev2 = float,class:^(pulsemixer)$
 windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Alacritty)$
 windowrulev2 = workspace 2,class:^(firefox)$
-windowrulev2 = workspace 3,class:^(ranger)$
+windowrulev2 = workspace 3,class:^(fm)$
 windowrulev2 = workspace 3,class:^(pcmanfm)$
 windowrulev2 = workspace 7,class:^(Emacs)$
 windowrulev2 = workspace 8,class:^(steam)$
@@ -151,14 +151,15 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, W, killactive, 
 bind = $mainMod, D, exec, $terminal --class launcher -e sway-launcher-desktop
 bind = $mainMod, S, exec, rofi -show window
-bind = $mainMod, E, exec, $terminal --class ranger -e ranger
+bind = $mainMod, E, exec, $terminal --class fm -e nnn -de
 bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class pulsemixer -e pulsemixer
 bind = $mainMod SHIFT, S, exec, grimblast copysave area
 
 # window management
 bind = $mainMod, T, workspace, empty
-bind = $mainMod, Tab, togglespecialworkspace
-bind = $mainMod SHIFT, Tab, movetoworkspace, special
+bind = $mainMod, Escape, togglespecialworkspace
+bind = $mainMod SHIFT, Escape, movetoworkspace, special
+bind = $mainMod, Tab, workspace, previous
 bind = $mainMod, bracketright, workspace, e+1
 bind = $mainMod, bracketleft, workspace, e-1
 bind = $mainMod, A, layoutmsg, swapwithmaster master
@@ -167,14 +168,14 @@ bind = $mainMod SHIFT, M, fullscreen, 0
 bind = $mainMod, F, togglefloating, 
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, J, movefocus, d
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, L, movefocus, r
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, down, movefocus, d
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, right, movefocus, r
+bind = $mainMod, J, layoutmsg, cyclenext
+bind = $mainMod, K, layoutmsg, cycleprev
+binde= $mainMod, H, resizeactive, -10 0
+binde= $mainMod, L, resizeactive, 10 0
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
