use kitty as default terminal

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ exec-once = firefox
 #env = XCURSOR_SIZE,18
 env = WLR_NO_HARDWARE_CURSORS,1
 
-$terminal = alacritty
+$terminal = kitty
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -120,13 +120,15 @@ device:epic-mouse-v1 {
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrule = float, ^myfloating.?$
+windowrule = center 1, ^myfloating.?$
+windowrule = size 50% 50%, ^myfloating$
+windowrule = size 80% 80%, ^myfloatingl$
+
 windowrule = float, feh
-windowrule = float, launcher
 windowrule = float, Rofi
-windowrule = float, calcure
-windowrulev2 = float,class:^(pulsemixer)$
 windowrulev2 = float,class:blueman-manager-wrapped
-windowrulev2 = workspace 1,class:^(Alacritty)$
+windowrulev2 = workspace 1,class:^(kitty)$
 windowrulev2 = workspace 2,class:^(firefox)$
 windowrulev2 = workspace 3,class:^(fm)$
 windowrulev2 = workspace 3,class:^(pcmanfm)$
@@ -149,10 +151,10 @@ bind = $mainMod, Z, exec, pkill -SIGUSR1 waybar  # toggle waybar visibility
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, W, killactive, 
-bind = $mainMod, D, exec, $terminal --class launcher -e sway-launcher-desktop
+bind = $mainMod, D, exec, $terminal --class myfloating sway-launcher-desktop
 bind = $mainMod, S, exec, rofi -show window
-bind = $mainMod, E, exec, $terminal --class fm -e nnn -de
-bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class pulsemixer -e pulsemixer
+bind = $mainMod, E, exec, $terminal --class myfloating nnn -de
+bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class myfloating pulsemixer
 bind = $mainMod SHIFT, S, exec, grimblast copysave area
 
 # window management
