--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ exec-once = firefox
 #env = XCURSOR_SIZE,18
 env = WLR_NO_HARDWARE_CURSORS,1
 
-$terminal = kitty
+$terminal = alacritty
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -117,7 +117,7 @@ device:epic-mouse-v1 {
 }
 
 # Example windowrule v1
-# windowrule = float, ^(kitty)$
+# windowrule = float, ^(alacritty)$
 # Example windowrule v2
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrule = float, ^myfloating.?$
@@ -128,7 +128,7 @@ windowrule = size 80% 80%, ^myfloatingl$
 windowrule = float, feh
 windowrule = float, Rofi
 windowrulev2 = float,class:blueman-manager-wrapped
-windowrulev2 = workspace 1,class:^(kitty)$
+windowrulev2 = workspace 1,class:^(alacritty)$
 windowrulev2 = workspace 2,class:^(firefox)$
 windowrulev2 = workspace 3,class:^(fm)$
 windowrulev2 = workspace 3,class:^(pcmanfm)$
@@ -136,6 +136,7 @@ windowrulev2 = workspace 7,class:^(Emacs)$
 windowrulev2 = workspace 8,class:^(steam)$
 windowrulev2 = workspace 8,class:^(dota2)$
 windowrulev2 = workspace 9,class:^(QQ)$
+windowrulev2 = workspace 9,class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = workspace special,title:Spotify
 
 
@@ -151,10 +152,10 @@ bind = $mainMod, Z, exec, pkill -SIGUSR1 waybar  # toggle waybar visibility
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, W, killactive, 
-bind = $mainMod, D, exec, $terminal --class myfloating sway-launcher-desktop
+bind = $mainMod, D, exec, $terminal --class myfloating -e sway-launcher-desktop
 bind = $mainMod, S, exec, rofi -show window
-bind = $mainMod, E, exec, $terminal --class myfloating nnn -de
-bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class myfloating pulsemixer
+bind = $mainMod, E, exec, $terminal --class fm -e nnn -de
+bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class myfloating -e pulsemixer
 bind = $mainMod SHIFT, S, exec, grimblast copysave area
 
 # window management
