--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -128,7 +128,7 @@ windowrule = size 80% 80%, ^myfloatingl$
 windowrule = float, feh
 windowrule = float, Rofi
 windowrulev2 = float,class:blueman-manager-wrapped
-windowrulev2 = workspace 1,class:^(alacritty)$
+windowrulev2 = workspace 1,class:^(Alacritty)$
 windowrulev2 = workspace 2,class:^(firefox)$
 windowrulev2 = workspace 3,class:^(fm)$
 windowrulev2 = workspace 3,class:^(pcmanfm)$
