reformat configuration.nix; add swaylock

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -148,6 +148,7 @@ binde=, XF86AudioMute, exec, pulsemixer --toggle-mute
 binde=, XF86AudioRaiseVolume, exec, pulsemixer --change-volume +1
 binde=, XF86AudioLowerVolume, exec, pulsemixer --change-volume -1
 bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod, grave, exec, swaylock
 bind = $mainMod, Z, exec, pkill -SIGUSR1 waybar  # toggle waybar visibility
 
 bind = $mainMod, Return, exec, $terminal
