--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -184,6 +184,7 @@
   },
   "custom/launcher": {
     "format": " ",
-    "on-click": "hyprctl dispatch workspace empty"
+    "on-click": "hyprctl dispatch workspace empty",
+    "on-click-right": "swaylock"
   }
 }
