--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -125,7 +125,7 @@ windowrule = center 1, ^myfloating.?$
 windowrule = size 50% 50%, ^myfloating$
 windowrule = size 80% 80%, ^myfloatingl$
 
-windowrule = float, feh
+windowrule = float, com.interversehq.qView
 windowrule = float, Rofi
 windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Alacritty)$
