--- a/home/.config/hypr/hyprpaper.conf
+++ b/home/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/nixos/home/.config/hypr/wallpaper/wall.png
-wallpaper = ,contain:~/nixos/home/.config/hypr/wallpaper/wall.png
+preload = ~/nixos/home/.config/hypr/wallpaper/wall.jpg
+wallpaper = ,contain:~/nixos/home/.config/hypr/wallpaper/wall.jpg
