--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -9,8 +9,8 @@
   "modules-left": [
     "custom/launcher",
     "hyprland/workspaces",
+    "wlr/taskbar",
     "hyprland/window"
-    //"wlr/taskbar"
   ],
   "modules-center": [
     "clock"
@@ -40,10 +40,9 @@
     "format": "{icon}",
     "on-click": "activate",
     "format-icons": {
-      "special": "󰸳",
-      "urgent": "",
-      "active": "󰧞",
-      "default": "",
+      "active": "󰮯",
+      "default": "󰊠",
+      "special": "",
       "sort-by-number": true
     },
   },
