--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -32,6 +32,12 @@ exec-once = firefox
 # Some default env vars.
 #env = XCURSOR_SIZE,18
 env = WLR_NO_HARDWARE_CURSORS,1
+env = GTK_IM_MODULE,
+env = QT_IM_MODULE,
+env = GDK_BACKEND,wayland,x11
+env = QT_QPA_PLATFORM,wayland;xcb
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
 
 $terminal = alacritty
 
