--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -133,6 +133,8 @@ windowrule = size 80% 80%, ^myfloatingl$
 
 windowrule = float, com.interversehq.qView
 windowrule = float, Rofi
+windowrule = float, pavucontrol
+
 windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Alacritty)$
 windowrulev2 = workspace 2,class:^(firefox)$
