--- a/home/.config/waybar/config.jsonc
+++ b/home/.config/waybar/config.jsonc
@@ -16,11 +16,11 @@
     "clock"
   ],
   "modules-right": [
-    //"custom/playerctl",
     "custom/playerlabel",
     "pulseaudio",
     "tray",
-    "group/hardware"
+    // "group/hardware"
+    "custom/mytray",
   ],
   "clock": {
     "format": "{:%H:%M  %a  %b %d}",
@@ -55,29 +55,18 @@
        "Alacritty"
     ],
   },
-  "custom/playerctl": {
-    "format": "{icon}",
-    "return-type": "json",
-    "max-length": 64,
-    "exec": "playerctl -a metadata --format '{\"text\": \"{{artist}} - {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-    "on-click": "playerctl play-pause",
-    "format-icons": {
-      "Playing": "<span foreground='#E5B9C6'>󰒮 󰐌 󰒭</span>",
-      "Paused": "<span foreground='#928374'>󰒮 󰏥 󰒭</span>"
-    },
-  },
   "custom/playerlabel": {
-    "format": "<span>𝅘𝅥𝅮   {}</span>",
+    "format": "<span>{icon} {}</span>",
     "return-type": "json",
     "max-length": 48,
     "exec": "playerctl -i firefox -a metadata --format '{\"text\": \"{{artist}} - {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-    "on-click": "hyprctl dispatch togglespecialworkspace",
-    "on-click-right": "playerctl -i firefox play-pause",
+    "on-click": "playerctl -i firefox play-pause",
+    "on-click-right": "hyprctl dispatch togglespecialworkspace",
     "on-scroll-up": "playerctl previous",
     "on-scroll-down": "playerctl next",
     "format-icons": {
-      "Playing": "<span foreground='#E5B9C6'>󰒮 󰐌 󰒭</span>",
-      "Paused": "<span foreground='#928374'>󰒮 󰏥 󰒭</span>"
+      "Playing": "<span foreground='#bd93f9'>▶</span>",
+      "Paused": "<span foreground='#6272a4'>⏸</span>"
     },
   },
   "battery": {
@@ -127,7 +116,8 @@
   },
   "custom/mytray": {
     "format": "󰥺",
-    "on-click": "pkill btm || $TERMINAL --class myfloatingl -e btm"
+    "on-click": "hyprctl dispatch workspace empty",
+    "on-click-right": "swaylock"
   },
   "group/hardware": {
     "orientation": "horizontal",
@@ -142,7 +132,7 @@
       "transition-duration": 500,
       "transition-left-to-right": true
     }
-	},
+  },
   "tray": {
     "icon-size": 16,
     "spacing": 8,
@@ -166,24 +156,24 @@
     //	"on-scroll-down":,
   },
   "pulseaudio": {
-    "format": "{icon} {volume}%",
-    "format-muted": "󰖁 --%",
+    "format": "{icon} {volume} 󱙝 ",
+    "format-muted": "{icon} {volume} 󱙜 ",
     "format-icons": {
       "default": [
         "󰕿",
         "",
-        "",
         "󱄡"
       ]
     },
     "on-click": "pulsemixer --toggle-mute",
+    "on-click-right": "pkill pavucontrol || pavucontrol",
     "on-scroll-up": "pulsemixer --change-volume +1",
     "on-scroll-down": "pulsemixer --change-volume -1",
     "scroll-step": 5
   },
   "custom/launcher": {
     "format": " ",
-    "on-click": "hyprctl dispatch workspace empty",
+    "on-click": "pkill btop || $TERMINAL --class myfloatingl -e btop",
     "on-click-right": "swaylock"
   }
 }
