--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -22,6 +22,7 @@ xwayland {
 # Execute your favorite apps at launch
 #exec-once = hyprctl setcursor Bibata-Modern-Ice 18
 exec-once = waybar & hyprpaper
+exec-once = swww init
 exec-once = fcitx5
 exec-once = nm-applet
 exec-once = firefox
