--- a/home/.config/hypr/hyprpaper.conf
+++ b/home/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/nixos/home/.config/hypr/wallpaper/wall.jpg
-wallpaper = ,contain:~/nixos/home/.config/hypr/wallpaper/wall.jpg
+preload = ~/nixos/home/wallpaper/wallpaper.jpg
+wallpaper = ,contain:~/nixos/home/wallpaper/wallpaper.jpg
