--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -82,7 +82,7 @@ decoration {
     shadow_render_power = 3
     shadow_scale = 0.97
     col.shadow = rgba(1a1a1aee)
-    dim_inactive = true
+    # dim_inactive = true
 }
 
 animations {
@@ -134,6 +134,7 @@ windowrule = size 80% 80%, ^myfloatingl$
 
 windowrule = float, com.interversehq.qView
 windowrule = float, Rofi
+windowrule = float, com.saivert.pwvucontrol
 windowrule = float, pavucontrol
 
 windowrulev2 = float,class:blueman-manager-wrapped
@@ -153,20 +154,19 @@ windowrulev2 = workspace special,title:Spotify
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-binde=, XF86AudioMute, exec, pulsemixer --toggle-mute
-binde=, XF86AudioRaiseVolume, exec, pulsemixer --change-volume +1
-binde=, XF86AudioLowerVolume, exec, pulsemixer --change-volume -1
+binde=, XF86AudioMute, exec, fish -c 'my_audio_mute'
+binde=, XF86AudioRaiseVolume, exec, fish -c 'my_audio_up'
+binde=, XF86AudioLowerVolume, exec, fish -c 'my_audio_down'
 bind = $mainMod SHIFT, Q, exit,
-bind = $mainMod, grave, exec, swaylock
+bind = $mainMod, grave, exec, fish -c 'my_locker'
 bind = $mainMod, Z, exec, pkill -SIGUSR1 waybar  # toggle waybar visibility
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, W, killactive, 
-bind = $mainMod, D, exec, $terminal --class myfloating -e sway-launcher-desktop
+bind = $mainMod, D, exec, $terminal --class myfloating -e fish -c 'my_launcher'
 bind = $mainMod, S, exec, rofi -show window
-bind = $mainMod, E, exec, $terminal --class fm -e nnn -de
-bind = $mainMod, P, exec, pkill pulsemixer || $terminal --class myfloating -e pulsemixer
-bind = $mainMod SHIFT, S, exec, grimblast copysave area
+bind = $mainMod, E, exec, $terminal --class fm -e fish -c 'my_file_manager'
+bind = $mainMod SHIFT, S, exec, fish -c 'my_screenshot'
 
 # window management
 bind = $mainMod, T, workspace, empty
