--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 
-$terminal = alacritty
+$terminal = kitty
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -123,9 +123,6 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
-# Example windowrule v1
-# windowrule = float, ^(alacritty)$
-# Example windowrule v2
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrule = float, ^myfloating.?$
 windowrule = center 1, ^myfloating.?$
@@ -139,6 +136,7 @@ windowrule = float, pavucontrol
 
 windowrulev2 = float,class:blueman-manager-wrapped
 windowrulev2 = workspace 1,class:^(Alacritty)$
+windowrulev2 = workspace 1,class:^(kitty)$
 windowrulev2 = workspace 2,class:^(firefox)$
 windowrulev2 = workspace 3,class:^(fm)$
 windowrulev2 = workspace 3,class:^(pcmanfm)$
@@ -163,9 +161,9 @@ bind = $mainMod, Z, exec, pkill -SIGUSR1 waybar  # toggle waybar visibility
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, W, killactive, 
-bind = $mainMod, D, exec, $terminal --class myfloating -e fish -c 'my_launcher'
+bind = $mainMod, D, exec, $terminal --class myfloating fish -c 'my_launcher'
 bind = $mainMod, S, exec, rofi -show window
-bind = $mainMod, E, exec, $terminal --class fm -e fish -c 'my_file_manager'
+bind = $mainMod, E, exec, $terminal --class fm fish -c 'my_file_manager'
 bind = $mainMod SHIFT, S, exec, fish -c 'my_screenshot'
 
 # window management
