--- a/home/.config/hypr/hyprpaper.conf
+++ b/home/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/nixos/home/wallpaper/wallpaper.jpg
-wallpaper = ,contain:~/nixos/home/wallpaper/wallpaper.jpg
+preload = ~/.config/home-manager/wallpaper/wallpaper.jpg
+wallpaper = ,contain:~/.config/home-manager/wallpaper/wallpaper.jpg
