--- a/home/.config/ranger/rc.conf
+++ b/home/.config/ranger/rc.conf
@@ -1,6 +1,8 @@
 # Default RC
 # https://github.com/ranger/ranger/blob/master/ranger/config/rc.conf
 
+set preview_files false
+set preview_directories false
 set preview_images true
 set preview_images_method kitty
 
