--- a/home/.local/share/fcitx5/themes/dracula/theme.conf
+++ b/home/.local/share/fcitx5/themes/dracula/theme.conf
@@ -1,22 +1,20 @@
 [Metadata]
-Name=transparent-green
+Name=dracula
 Version=0.1
-Author=thepoy
-Description=Fctix5 Transparent Green Theme
-ScaleWithDPI=True
+Author=drbbr
+Desc=Dracula Dark Fcitx5 Theme
 
 [InputPanel]
 # 字体
-Font=Sans 13
+Font=Sans 14
 # 非选中候选字颜色
-NormalColor=#ffffff
+NormalColor=#bd93f9
 # 选中候选字颜色
-HighlightCandidateColor=#80FF00
-# 高亮前景颜色(输入字符颜色)
-HighlightColor=#ffffff
+HighlightCandidateColor=#f8f8f2
+# 高亮前景颜色(输入字符颜色）
+HighlightColor=#50fa7b
 # 输入字符背景颜色
 HighlightBackgroundColor=#00000000
-# 
 Spacing=3
 
 [InputPanel/TextMargin]
@@ -39,7 +37,7 @@ Top=2
 Bottom=2
 
 [InputPanel/Highlight]
-Color=#00030303
+Color=#ff79c6
 
 [InputPanel/Highlight/Margin]
 # 高亮区域左边距
@@ -51,8 +49,13 @@ Top=10
 # 高亮区域下边距
 Bottom=10
 
+[Menu]
+Font=Sans 10
+NormalColor=#50fa7b
+Spacing=3
+
 [Menu/Background]
-Color=#ffffff
+Color=#282a36
 
 [Menu/Background/Margin]
 Left=2
@@ -67,7 +70,7 @@ Top=2
 Bottom=2
 
 [Menu/Highlight]
-Color=#00030303
+Color=#44475a
 
 [Menu/Highlight/Margin]
 Left=10
@@ -76,7 +79,7 @@ Top=5
 Bottom=5
 
 [Menu/Separator]
-Color=#c0c0c0
+Color=#6272a4
 
 [Menu/CheckBox]
 Image=radio.png
