--- a/home/.local/share/fcitx5/themes/dracula/theme.conf
+++ b/home/.local/share/fcitx5/themes/dracula/theme.conf
@@ -6,7 +6,7 @@ Desc=Dracula Dark Fcitx5 Theme
 
 [InputPanel]
 # 字体
-Font=Sans 14
+Font=Noto Sans CJK 13
 # 非选中候选字颜色
 NormalColor=#bd93f9
 # 选中候选字颜色
@@ -50,7 +50,7 @@ Top=10
 Bottom=10
 
 [Menu]
-Font=Sans 10
+Font=Noto Sans CJK 10
 NormalColor=#50fa7b
 Spacing=3
 
